--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,14 @@ Hero
 }
 .learn-more-btn { background: rgba(61, 201, 179, 1); padding: 20px 40px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -o-border-radius: 5px; color: #fff; text-transform: uppercase; letter-spacing: 1px; display: inline-block; -webkit-box-shadow: 0px 3px 0px 0px #309383; -moz-box-shadow: 0px 3px 0px 0px #309383; box-shadow: 0px 3px 0px 0px #309383; margin: 60px 0 0; font-weight: bold; }
 .learn-more-btn:hover, .learn-more-btn:focus { background: rgba(61, 201, 179, 0.6); color: #fff; }
+
+.member {
+	width: 250px;
+	margin: 0 auto;
+	position: relative;
+	top: 100px;
+}
+
 /* ==========================================================================
 Intro
 ========================================================================== */
@@ -272,6 +280,15 @@ a.expand { display: block; position: absolute; z-index: 100; text-align: center;
 .img img { width: -webkit-calc(100% + 40px) !important; width: calc(100% + 40px) !important; -webkit-transition: opacity 0.35s, -webkit-transform 0.35s; transition: opacity 0.35s, transform 0.35s; -moz-transition: opacity 0.35s, -moz-transform 0.35s; -o-transition: opacity 0.35s, -o-transform 0.35s; -webkit-transform: translate3d(-40px, 0, 0); transform: translate3d(-40px, 0, 0); -ms-transform: translate3d(-40px, 0, 0); }
 .img:hover img { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); -ms-transform: translate3d(-40px, 0, 0); }
 .designs { position: absolute; left: 0; right: 0; margin-left: auto; margin-right: auto; top: 50px; }
+/* ==========================================================================
+Events
+========================================================================== */
+.events { padding: 20px auto; width: 100%; height: 300px;}
+.events h1 {margin-top: 70px;}
+.member-btn { display: inline-block; padding: 25px 40px; color: black; border: solid 1px #FB3E3E; text-transform: : uppercase; font-weight: : bold; letter-spacing: 1px;}
+.member-btn:hover, .member-btn:focus {color: #3dc9b3; border: solid 1px #3dc9b3;}
+
+
 /* ==========================================================================
 Subscribe
 ========================================================================== */
